tests/models/struct/named/unit/fail/le.stderr
error: Support condition is alias, default
 --> tests/models/struct/named/unit/fail/le.rs:5:5
  |
5 |     value: (),
  |     ^^^^^
